<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#009688"
            android:backgroundTint="#009688"
            android:gravity="center"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/title_movie"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorLightPrimary"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
            app:layout_constraintVertical_bias="0.112">

            <TextView
                android:id="@+id/tv_item_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/originLanguange"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/img_item_photo"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_dateReleased" />

            <TextView
                android:id="@+id/tv_item_dateReleased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/date_relealesed"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/img_item_photo"
                app:layout_constraintTop_toTopOf="@+id/img_item_photo" />

            <TextView
                android:id="@+id/tv_item_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/genre"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/img_item_photo"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_language" />

            <ImageView
                android:id="@+id/imageRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/icon_star"
                app:layout_constraintStart_toEndOf="@+id/img_item_photo"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_genre"
                app:srcCompat="@drawable/ic_star_gold_24dp" />

            <ImageView
                android:id="@+id/imageRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/icon_runtime"
                app:layout_constraintStart_toEndOf="@+id/img_item_photo"
                app:layout_constraintTop_toBottomOf="@+id/imageRating"
                app:srcCompat="@drawable/ic_time_black_24dp" />

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="152dp"
                android:layout_height="206dp"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/image_poster"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_item_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/icon_runtime"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageRuntime"
                app:layout_constraintStart_toEndOf="@+id/imageRuntime"
                app:layout_constraintTop_toBottomOf="@+id/imageRating" />

            <TextView
                android:id="@+id/tv_item_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/icon_star"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageRating"
                app:layout_constraintStart_toEndOf="@+id/imageRating"
                app:layout_constraintTop_toTopOf="@+id/imageRating" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="370dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="start"
            android:paddingLeft="24dp"
            android:paddingTop="6dp"
            android:paddingRight="24dp"
            android:paddingBottom="6dp"
            android:text="@string/overview"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overtext"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>